v1.0.0/modules/schema/pages/class/PssIEEE3B.adoc
= `PssIEEE3B`
:toclevels: 4


+++IEEE 421.5-2005 type PSS3B power system stabilizer model. The PSS model PSS3B has dual inputs of electrical power and rotor angular frequency deviation. The signals are used to derive an equivalent mechanical power signal.
This model has 2 input signals. They have the following fixed types (expressed in terms of InputSignalKind values): the first one is of rotorAngleFrequencyDeviation type and the second one is of generatorElectricalPower type.
Reference: IEEE 3B 421.5-2005, 8.3.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PssIEEE3B`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
**** *`PssIEEE3B`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
PssIEEE3B {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





































ExcitationSystemDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



RemoteInputSignal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





















PssIEEE3B -> ExcitationSystemDynamics: ExcitationSystemDynamics


PssIEEE3B -> RemoteInputSignal: RemoteInputSignal


PssIEEE3B -> DiagramObject: DiagramObjects


PssIEEE3B -> InstanceSet: InstanceSet


PssIEEE3B -> Name: Names


PssIEEE3B -> ChangeSetMember: PropertiesCIMDataObject


PssIEEE3B -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 1
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model with which this power system stabilizer model is associated.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<a1,`a1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Notch filter parameter (<i>A1</i>).  Typical value = 0,359.+++

| <<a2,`a2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Notch filter parameter (<i>A2</i>).  Typical value = 0,586.+++

| <<a3,`a3`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Notch filter parameter (<i>A3</i>).  Typical value = 0,429.+++

| <<a4,`a4`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Notch filter parameter (<i>A4</i>).  Typical value = 0,564.+++

| <<a5,`a5`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Notch filter parameter (<i>A5</i>).  Typical value = 0,001.+++

| <<a6,`a6`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Notch filter parameter (<i>A6</i>).  Typical value = 0.+++

| <<a7,`a7`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Notch filter parameter (<i>A7</i>).  Typical value = 0,031.+++

| <<a8,`a8`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Notch filter parameter (<i>A8</i>).  Typical value = 0.+++

| <<ks1,`ks1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Gain on signal # 1 (<i>Ks1</i>).  Typical value = -0,602.+++

| <<ks2,`ks2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Gain on signal # 2 (<i>Ks2</i>).  Typical value = 30,12.+++

| <<t1,`t1`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Transducer time constant (<i>T1</i>) (&gt;= 0).  Typical value = 0,012.+++

| <<t2,`t2`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Transducer time constant (<i>T2</i>) (&gt;= 0).  Typical value = 0,012.+++

| <<tw1,`tw1`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Washout time constant (<i>Tw1</i>) (&gt;= 0).  Typical value = 0,3.+++

| <<tw2,`tw2`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Washout time constant (<i>Tw2</i>) (&gt;= 0).  Typical value = 0,3.+++

| <<tw3,`tw3`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Washout time constant (<i>Tw3</i>) (&gt;= 0).  Typical value = 0,6.+++

| <<vstmax,`vstmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Stabilizer output maximum limit (<i>Vstmax</i>) (&gt; PssIEEE3B.vstmin).  Typical value = 0,1.+++

| <<vstmin,`vstmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Stabilizer output minimum limit (<i>Vstmin</i>) (&lt; PssIEEE3B.vstmax).  Typical value = -0,1.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<RemoteInputSignal,`RemoteInputSignal`>>
| 0..*
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by this power system stabilizer model.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#a1]
=== `a1`
+++Notch filter parameter (<i>A1</i>).  Typical value = 0,359.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.a1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#a2]
=== `a2`
+++Notch filter parameter (<i>A2</i>).  Typical value = 0,586.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.a2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#a3]
=== `a3`
+++Notch filter parameter (<i>A3</i>).  Typical value = 0,429.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.a3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#a4]
=== `a4`
+++Notch filter parameter (<i>A4</i>).  Typical value = 0,564.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.a4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#a5]
=== `a5`
+++Notch filter parameter (<i>A5</i>).  Typical value = 0,001.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.a5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#a6]
=== `a6`
+++Notch filter parameter (<i>A6</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.a6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#a7]
=== `a7`
+++Notch filter parameter (<i>A7</i>).  Typical value = 0,031.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.a7`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#a8]
=== `a8`
+++Notch filter parameter (<i>A8</i>).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.a8`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model with which this power system stabilizer model is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.ExcitationSystemDynamics`
| Cardinality
| 1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ks1]
=== `ks1`
+++Gain on signal # 1 (<i>Ks1</i>).  Typical value = -0,602.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.ks1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#ks2]
=== `ks2`
+++Gain on signal # 2 (<i>Ks2</i>).  Typical value = 30,12.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.ks2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by this power system stabilizer model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.RemoteInputSignal`
| Cardinality
| 0..*
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

//[discrete]
[#t1]
=== `t1`
+++Transducer time constant (<i>T1</i>) (&gt;= 0).  Typical value = 0,012.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.t1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t2]
=== `t2`
+++Transducer time constant (<i>T2</i>) (&gt;= 0).  Typical value = 0,012.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.t2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tw1]
=== `tw1`
+++Washout time constant (<i>Tw1</i>) (&gt;= 0).  Typical value = 0,3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.tw1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tw2]
=== `tw2`
+++Washout time constant (<i>Tw2</i>) (&gt;= 0).  Typical value = 0,3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.tw2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tw3]
=== `tw3`
+++Washout time constant (<i>Tw3</i>) (&gt;= 0).  Typical value = 0,6.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.tw3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#vstmax]
=== `vstmax`
+++Stabilizer output maximum limit (<i>Vstmax</i>) (&gt; PssIEEE3B.vstmin).  Typical value = 0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.vstmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vstmin]
=== `vstmin`
+++Stabilizer output minimum limit (<i>Vstmin</i>) (&lt; PssIEEE3B.vstmax).  Typical value = -0,1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.vstmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===


