v1.1.0/modules/schema/pages/class/PssIEEE3B.adoc
= `PssIEEE3B`
:toclevels: 4


+++IEEE 421.5-2005 type PSS3B power system stabilizer model. The PSS model PSS3B has dual inputs of electrical power and rotor angular frequency deviation. The signals are used to derive an equivalent mechanical power signal.
This model has 2 input signals. They have the following fixed types (expressed in terms of InputSignalKind values): the first one is of rotorAngleFrequencyDeviation type and the second one is of generatorElectricalPower type.
Reference: IEEE 3B 421.5-2005, 8.3.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PssIEEE3B`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]
**** *`PssIEEE3B`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<a1,`a1`>>
//| [[slots_table.a1]]<<a1,`a1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Notch filter parameter (<i>A1</i>).  Typical value = 0,359.+++
| _n/a_

| <<a2,`a2`>>
//| [[slots_table.a2]]<<a2,`a2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Notch filter parameter (<i>A2</i>).  Typical value = 0,586.+++
| _n/a_

| <<a3,`a3`>>
//| [[slots_table.a3]]<<a3,`a3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Notch filter parameter (<i>A3</i>).  Typical value = 0,429.+++
| _n/a_

| <<a4,`a4`>>
//| [[slots_table.a4]]<<a4,`a4`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Notch filter parameter (<i>A4</i>).  Typical value = 0,564.+++
| _n/a_

| <<a5,`a5`>>
//| [[slots_table.a5]]<<a5,`a5`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Notch filter parameter (<i>A5</i>).  Typical value = 0,001.+++
| _n/a_

| <<a6,`a6`>>
//| [[slots_table.a6]]<<a6,`a6`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Notch filter parameter (<i>A6</i>).  Typical value = 0.+++
| _n/a_

| <<a7,`a7`>>
//| [[slots_table.a7]]<<a7,`a7`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Notch filter parameter (<i>A7</i>).  Typical value = 0,031.+++
| _n/a_

| <<a8,`a8`>>
//| [[slots_table.a8]]<<a8,`a8`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Notch filter parameter (<i>A8</i>).  Typical value = 0.+++
| _n/a_

| <<ks1,`ks1`>>
//| [[slots_table.ks1]]<<ks1,`ks1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Gain on signal # 1 (<i>Ks1</i>).  Typical value = -0,602.+++
| _n/a_

| <<ks2,`ks2`>>
//| [[slots_table.ks2]]<<ks2,`ks2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Gain on signal # 2 (<i>Ks2</i>).  Typical value = 30,12.+++
| _n/a_

| <<t1,`t1`>>
//| [[slots_table.t1]]<<t1,`t1`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Transducer time constant (<i>T1</i>) (&gt;= 0).  Typical value = 0,012.+++
| _n/a_

| <<t2,`t2`>>
//| [[slots_table.t2]]<<t2,`t2`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Transducer time constant (<i>T2</i>) (&gt;= 0).  Typical value = 0,012.+++
| _n/a_

| <<tw1,`tw1`>>
//| [[slots_table.tw1]]<<tw1,`tw1`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Washout time constant (<i>Tw1</i>) (&gt;= 0).  Typical value = 0,3.+++
| _n/a_

| <<tw2,`tw2`>>
//| [[slots_table.tw2]]<<tw2,`tw2`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Washout time constant (<i>Tw2</i>) (&gt;= 0).  Typical value = 0,3.+++
| _n/a_

| <<tw3,`tw3`>>
//| [[slots_table.tw3]]<<tw3,`tw3`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Washout time constant (<i>Tw3</i>) (&gt;= 0).  Typical value = 0,6.+++
| _n/a_

| <<vstmax,`vstmax`>>
//| [[slots_table.vstmax]]<<vstmax,`vstmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Stabilizer output maximum limit (<i>Vstmax</i>) (&gt; PssIEEE3B.vstmin).  Typical value = 0,1.+++
| _n/a_

| <<vstmin,`vstmin`>>
//| [[slots_table.vstmin]]<<vstmin,`vstmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Stabilizer output minimum limit (<i>Vstmin</i>) (&lt; PssIEEE3B.vstmax).  Typical value = -0,1.+++
| _n/a_

| <<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
//| [[slots_table.ExcitationSystemDynamics]]<<ExcitationSystemDynamics,`ExcitationSystemDynamics`>>
| 1 +
xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]
| +++Excitation system model with which this power system stabilizer model is associated.+++
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| <<RemoteInputSignal,`RemoteInputSignal`>>
//| [[slots_table.RemoteInputSignal]]<<RemoteInputSignal,`RemoteInputSignal`>>
| 0..* +
xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Remote input signal used by this power system stabilizer model.+++
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#a1]
=== `a1`
+++Notch filter parameter (<i>A1</i>).  Typical value = 0,359.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.a1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.a1,&#10548;>>
--
////


//[discrete]
[#a2]
=== `a2`
+++Notch filter parameter (<i>A2</i>).  Typical value = 0,586.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.a2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.a2,&#10548;>>
--
////


//[discrete]
[#a3]
=== `a3`
+++Notch filter parameter (<i>A3</i>).  Typical value = 0,429.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.a3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.a3,&#10548;>>
--
////


//[discrete]
[#a4]
=== `a4`
+++Notch filter parameter (<i>A4</i>).  Typical value = 0,564.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.a4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.a4,&#10548;>>
--
////


//[discrete]
[#a5]
=== `a5`
+++Notch filter parameter (<i>A5</i>).  Typical value = 0,001.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.a5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.a5,&#10548;>>
--
////


//[discrete]
[#a6]
=== `a6`
+++Notch filter parameter (<i>A6</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.a6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.a6,&#10548;>>
--
////


//[discrete]
[#a7]
=== `a7`
+++Notch filter parameter (<i>A7</i>).  Typical value = 0,031.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.a7`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.a7,&#10548;>>
--
////


//[discrete]
[#a8]
=== `a8`
+++Notch filter parameter (<i>A8</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.a8`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.a8,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#ExcitationSystemDynamics]
=== `ExcitationSystemDynamics`
+++Excitation system model with which this power system stabilizer model is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.ExcitationSystemDynamics`
| Cardinality
| 1
| Type
| xref::class/ExcitationSystemDynamics.adoc[`ExcitationSystemDynamics`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

////
[.text-left]
--
<<slots_table.ExcitationSystemDynamics,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#ks1]
=== `ks1`
+++Gain on signal # 1 (<i>Ks1</i>).  Typical value = -0,602.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.ks1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ks1,&#10548;>>
--
////


//[discrete]
[#ks2]
=== `ks2`
+++Gain on signal # 2 (<i>Ks2</i>).  Typical value = 30,12.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.ks2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ks2,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Remote input signal used by this power system stabilizer model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemStabilizerDynamics.RemoteInputSignal`
| Cardinality
| 0..*
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]

| Inherited from
| xref::class/PowerSystemStabilizerDynamics.adoc[`PowerSystemStabilizerDynamics`]


|===

////
[.text-left]
--
<<slots_table.RemoteInputSignal,&#10548;>>
--
////


//[discrete]
[#t1]
=== `t1`
+++Transducer time constant (<i>T1</i>) (&gt;= 0).  Typical value = 0,012.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.t1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t1,&#10548;>>
--
////


//[discrete]
[#t2]
=== `t2`
+++Transducer time constant (<i>T2</i>) (&gt;= 0).  Typical value = 0,012.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.t2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t2,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tw1]
=== `tw1`
+++Washout time constant (<i>Tw1</i>) (&gt;= 0).  Typical value = 0,3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.tw1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tw1,&#10548;>>
--
////


//[discrete]
[#tw2]
=== `tw2`
+++Washout time constant (<i>Tw2</i>) (&gt;= 0).  Typical value = 0,3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.tw2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tw2,&#10548;>>
--
////


//[discrete]
[#tw3]
=== `tw3`
+++Washout time constant (<i>Tw3</i>) (&gt;= 0).  Typical value = 0,6.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.tw3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tw3,&#10548;>>
--
////


//[discrete]
[#vstmax]
=== `vstmax`
+++Stabilizer output maximum limit (<i>Vstmax</i>) (&gt; PssIEEE3B.vstmin).  Typical value = 0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.vstmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vstmax,&#10548;>>
--
////


//[discrete]
[#vstmin]
=== `vstmin`
+++Stabilizer output minimum limit (<i>Vstmin</i>) (&lt; PssIEEE3B.vstmax).  Typical value = -0,1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PssIEEE3B.vstmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vstmin,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
